// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render the component with \`default size\` 1`] = `
<div
  className="sc-bdVaJa beMqVY"
  size=""
/>
`;

exports[`<Select /> should render the component with \`error validation state\` 1`] = `
<div
  className="sc-bdVaJa iZRFgm"
  size=""
/>
`;

exports[`<Select /> should render the component with \`small size\` 1`] = `
<div
  className="sc-bdVaJa fzpDkV"
  size="small"
/>
`;

exports[`<Select /> should render the component with \`success validation state\` 1`] = `
<div
  className="sc-bdVaJa lkBrXh"
  size=""
/>
`;

exports[`<Select /> should render the component with \`warning validation state\` 1`] = `
<div
  className="sc-bdVaJa jBkosu"
  size=""
/>
`;
